--- a/index.html
+++ b/index.html
@@ -3,78 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacker News Clone</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f6f6ef;
-        }
-        .header {
-            background-color: #ff6600;
-            padding: 10px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .header a {
-            color: black;
-            text-decoration: none;
-            margin-right: 10px;
-        }
-        .content {
-            padding: 20px;
-        }
-        .news-item {
-            margin-bottom: 10px;
-        }
-        .news-item a {
-            text-decoration: none;
-            color: #000;
-            font-size: 16px;
-        }
-        .meta {
-            font-size: 12px;
-            color: gray;
-        }
-    </style>
+    <title>웹사이트</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <a href="#">Hacker News</a> |
-        <a href="#">new</a> |
-        <a href="#">past</a> |
-        <a href="#">comments</a> |
-        <a href="#">ask</a> |
-        <a href="#">show</a> |
-        <a href="#">jobs</a> |
-        <a href="#">submit</a>
-    </div>
-    <div class="content">
-        <div class="news-item">
-            <a href="#">1. DeepSeek-R1-671B-Q4_K_M with 1 or 2 Arc A770 on Xeon</a>
-            <div class="meta">160 points by colorant | 65 comments</div>
-        </div>
-        <div class="news-item">
-            <a href="#">2. Tailscale is pretty useful</a>
-            <div class="meta">536 points by marban | 283 comments</div>
-        </div>
-        <div class="news-item">
-            <a href="#">3. Cognitive Behaviors That Enable Self-Improving Reasoners</a>
-            <div class="meta">87 points by dellfu | 8 comments</div>
-        </div>
-        <div class="news-item">
-            <a href="#">4. Apple M3 Ultra</a>
-            <div class="meta">891 points by ksec | 828 comments</div>
-        </div>
-        <div class="news-item">
-            <a href="#">5. Git without a forge</a>
-            <div class="meta">221 points by tosdacoder | 81 comments</div>
-        </div>
-        <div class="news-item">
-            <a href="#">6. QwQ-32B: Embracing the Power of Reinforcement Learning</a>
-            <div class="meta">281 points by nswjstm | 145 comments</div>
-        </div>
+    <div class="container">
+        <header>
+            <nav>
+                <a href="#" class="nav-item">홈</a>
+                <span class="nav-separator">|</span>
+                <a href="#" class="nav-item">소개</a>
+                <span class="nav-separator">|</span>
+                <a href="#" class="nav-item">소식</a>
+            </nav>
+        </header>
+        
+        <main>
+            <p>우리 웹사이트에 오신것을 환영합니다</p>
+            <p>모든 클릭에 기쁨이 함께하기를 바랍니다</p>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Ahns.cloud All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
