--- a/posts.html
+++ b/posts.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹사이트</title>
+    <title>소식 - 웹사이트</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
             <nav>
-                <a href="index.html" class="nav-item active">홈</a>
+                <a href="index.html" class="nav-item">홈</a>
                 <span class="nav-separator">|</span>
                 <a href="about.html" class="nav-item">소개</a>
                 <span class="nav-separator">|</span>
-                <a href="posts.html" class="nav-item">소식</a>
+                <a href="posts.html" class="nav-item active">소식</a>
             </nav>
         </header>
         
         <main>
-            <p>우리 웹사이트에 오신것을 환영합니다.</p>
-            <p>모든 클릭에 기쁨이 함께하기를 바랍니다.</p>
+            <p>최신 소식을 전해드립니다.</p>
         </main>
 
         <footer>
@@ -28,4 +27,4 @@
         </footer>
     </div>
 </body>
-</html>
+</html> 
