--- a/about.html
+++ b/about.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹사이트</title>
+    <title>소개 - 웹사이트</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
             <nav>
-                <a href="index.html" class="nav-item active">홈</a>
+                <a href="index.html" class="nav-item">홈</a>
                 <span class="nav-separator">|</span>
-                <a href="about.html" class="nav-item">소개</a>
+                <a href="about.html" class="nav-item active">소개</a>
                 <span class="nav-separator">|</span>
                 <a href="posts.html" class="nav-item">소식</a>
             </nav>
         </header>
         
         <main>
-            <p>우리 웹사이트에 오신것을 환영합니다.</p>
-            <p>모든 클릭에 기쁨이 함께하기를 바랍니다.</p>
+            <p>이 페이지는 웹사이트 소개 페이지입니다.</p>
         </main>
 
         <footer>
-            <p>&copy; 2025 Ahns.cloud All rights reserved.</p>
+            <p>&copy; 2025 Vietrest.com All rights reserved.</p>
         </footer>
     </div>
 </body>
