--- a/about.html
+++ b/about.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소개 - 웹사이트</title>
+    <title>소개 - 베트남 여행 이야기</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
+            <div class="logo">
+                <a href="index.html">AHNS</a>
+            </div>
             <nav>
                 <a href="index.html" class="nav-item">홈</a>
                 <span class="nav-separator">|</span>
@@ -19,11 +23,13 @@
         </header>
         
         <main>
-            <p>이 페이지는 웹사이트 소개 페이지입니다.</p>
+            <h1>블로그 소개</h1>
+            <p class="subtitle">베트남의 진짜 모습을 전해드립니다</p>
+            <!-- 여기에 소개 페이지 컨텐츠를 추가하세요 -->
         </main>
 
         <footer>
-            <p>&copy; 2025 Vietrest.com All rights reserved.</p>
+            <p>&copy; 2025 Ahns.cloud All rights reserved.</p>
         </footer>
     </div>
 </body>
